# HomeStock

./: .env  .gitignore  README.md  pyproject.toml
.copilot/prompts/: use_case.md  use_case_creation.md
conf/security/: certs.json
deploy/docker/: Dockerfile  Dockerfile.web  Dockerfile.worker  docker-compose.yaml  requirements.txt
src/: __init__.py  manage.py  oauth.py
src/authentication/user/domain/model/: user.py
src/catalogue/product/application/command/: create_product_command.py  create_product_command_handler.py  update_product_command.py  update_product_command_handler.py
src/catalogue/product/application/query/: get_products_query.py  get_products_query_handler.py
src/catalogue/product/application/use_cases/: create_product_command.py  create_product_command_handler.py
src/catalogue/product/domain/event/: product_created.py  product_updated.py
src/catalogue/product/domain/exception/: create_product_exception.py  update_product_exception.py
src/catalogue/product/domain/model/: product.py  product_repository.py
src/catalogue/product/domain/query_model/: get_products_query_model.py
src/catalogue/product/domain/repositories/: product_repository.py
src/catalogue/product/infrastructure/application/: command_handlers.yaml  query_handlers.yaml
src/shared/: __init__.py
src/shared/cqrs/application/: command_bus.py  command_handler.py
src/shared/cqrs/application/command/: command_bus.py
src/shared/dependency_injector/domain/: dependendy_injector.py
tests/catalogue/product/use_case/: test_create_product.py  test_update_product.py
(+64 files in other folders)
